# feynman

./: .gitignore  Cargo.toml  README.md  WEBSOCKET_FIX.md  test.sh
backend/: .env  .env.example  Cargo.toml  feynman_prompt.txt
backend/src/: main.rs  openai.rs  routes.rs
front/: package-lock.json
front/src/: App.tsx
front/src/hooks/: useMic.ts
front/src/services/: audio.ts  ws.ts
