[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.46.1", features = ["full"]}
axum = {version = "0.8.4", features =["ws"]}
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.27", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
tungstenite        = { version = "0.27", default-features = false, features = ["rustls-tls-webpki-roots"] }

anyhow = "1.0.98"
dotenvy = "0.15"
rustls = { version = "0.23.29", features = ["ring"] }

